# building-ai-agents

./: .gitignore  README.md
01-personalized-tutor/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
01-personalized-tutor/evals/: judge.py  run_evals.py
01-personalized-tutor/tests/: conftest.py  test_app_logic.py  test_guardrails.py  test_memory.py
01-personalized-tutor/tutor/: agents.py  app.py  guardrails.py  memory.py  models.py  observability.py  prompts.py
02-data-analyst/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
02-data-analyst/analyst/: app.py  charts.py  critic.py  runner.py  schema.py  sql_agent.py
02-data-analyst/evals/: judge.py  run_evals.py
02-data-analyst/tests/: test_critic.py  test_runner.py  test_schema.py  test_sql_agent.py
03-marketing-crew/: .env.example  README.md  pyproject.toml  requirements.txt
03-marketing-crew/crew/: agents.py  app.py  crew.py  models.py  tasks.py  tools.py
03-marketing-crew/evals/: judge.py  run_evals.py
03-marketing-crew/tests/: test_context_chain.py
04-support-deflection/: .env.example  Dockerfile  README.md  pyproject.toml
04-support-deflection/support/: app.py  graph.py  ingest.py  state.py  ticket_server.py
04-support-deflection/tests/: test_escalation_precision.py  test_gate.py  test_routing.py
05-automated-grading/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
05-automated-grading/evals/: calibrate.py  fairness.py
05-automated-grading/grading/: app.py  graph.py  rubric.py  state.py
05-automated-grading/tests/: conftest.py  test_fairness_calibration.py  test_live_api.py  test_review_gate.py  test_rubric.py  test_score.py  test_similarity.py
06-agentic-rag/: .env.example  Dockerfile  README.md  app.py  citations.py  docker-compose.yml  index.py  ingest.py  pyproject.toml  requirements.txt  rerank.py  synthesize.py  workflow.py
06-agentic-rag/assistant/: __init__.py  app.py  citations.py  index.py  ingest.py  rerank.py  synthesize.py  workflow.py
06-agentic-rag/evals/: run_evals.py
06-agentic-rag/tests/: test_citations.py  test_index.py  test_ingest.py
07-deep-research/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
07-deep-research/evals/: judge.py  run_evals.py
07-deep-research/research/: app.py  graph.py  prompts.py  state.py  tools.py
07-deep-research/tests/: test_graph.py
08-code-review/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
08-code-review/evals/: run_evals.py
08-code-review/review/: app.py  diff_utils.py  github_stub.py  graph.py  prompts.py  state.py
08-code-review/tests/: fixtures.py  test_consolidate.py  test_diff_utils.py  test_gate.py  test_graph_pipeline.py  test_live_smoke.py
09-iac-drift/: .env.example  (+5 more)
10-voice-support/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
10-voice-support/evals/: calls.jsonl  run_evals.py
10-voice-support/tests/: test_imports.py  test_latency_budget.py  test_live_integrations.py  test_session.py  test_tools.py
10-voice-support/voice/: agent.py  app.py  session.py  stt.py  tools.py  tts.py
11-competitive-intel/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
11-competitive-intel/evals/: run_evals.py
11-competitive-intel/monitor/: app.py  fetch_tool.py  graph.py  prompts.py  registry.py  schedule.py  state.py
11-competitive-intel/tests/: test_diff.py  test_fetch_tool.py  test_registry.py  test_score.py
12-literature-review/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
12-literature-review/evals/: judge.py  run_evals.py
12-literature-review/lit_review/: __init__.py  agents.py  app.py  corpus.py  tools.py  workflow.py
12-literature-review/tests/: conftest.py  test_corpus.py  test_guardrails.py  test_workflow.py
13-legal-research/: .env.example  README.md  pyproject.toml  requirements.txt
13-legal-research/evals/: run_evals.py
13-legal-research/research/: app.py  citations.py  corpus.py  embeddings.py  issues.py  memo.py  orchestrator.py  prompts.py  retrieval_subagent.py  synthesize.py
13-legal-research/tests/: test_citations.py  test_issues.py  test_synthesize.py
15-shopping-agent/: .env.example  Dockerfile  README.md  catalog_server.py  docker-compose.yml  pyproject.toml  requirements.txt
15-shopping-agent/evals/: dataset.jsonl  judge.py  run_evals.py
15-shopping-agent/shopping/: __init__.py  agents.py  app.py  guardrails.py  tools.py
15-shopping-agent/tests/: test_agents_structure.py  test_catalog_constraints.py  test_gate.py  test_guardrails.py  test_live_smoke.py
16-soc-triage/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
16-soc-triage/evals/: run_evals.py
16-soc-triage/mcp_servers/: intel_stub.py  siem_stub.py
16-soc-triage/tests/: test_gate.py  test_live.py  test_verdict_accuracy.py
16-soc-triage/triage/: app.py  graph.py  prompts.py  state.py
17-threat-intel/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  schema.sql
17-threat-intel/crew/: agents.py  app.py  crew.py  models.py  ranking.py  tasks.py  tools.py
17-threat-intel/evals/: dedup_check_eval.py  judge.py  ranking_check.py
18-diagnostic-debate/: .env.example  Dockerfile  README.md  pyproject.toml
19-trading-firm/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
20-aml-investigation/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
21-contract-diligence/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
22-coding-agent/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
23-incident-response/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
24-app-builder/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
25-supply-chain/: .env.example  README.md  a2a_client.py  docker-compose.demo.yml  pyproject.toml  run.py
(+195 files in other folders)
