[project]
name = "data-analyst"
version = "1.0.0"
description = "Autonomous Data Analyst — Building AI Agents, Project 2"
requires-python = ">=3.11"
dependencies = [
    "pydantic-ai>=2.1,<3.0",
    "pydantic>=2.11,<3.0",
    "duckdb>=1.2,<2.0",
    "pandas>=2.2,<3.0",
    "matplotlib>=3.9,<4.0",
    "langfuse>=3.6,<4.0",
    "python-dotenv>=1.0,<2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]

[tool.setuptools.packages.find]
where = ["."]
include = ["analyst*", "evals*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
