[project]
name = "marketing-crew"
version = "1.0.0"
description = "Marketing Content Pipeline Crew — Building AI Agents, Project 3"
requires-python = ">=3.11"
dependencies = [
    "crewai[anthropic]>=1.14,<2.0",
    "litellm>=1.71,<2.0",
    "fastapi>=0.118,<0.200",
    "uvicorn[standard]>=0.35,<0.40",
    "pydantic>=2.11,<3.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]

[tool.setuptools.packages.find]
where = ["."]
include = ["crew*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
