[project]
name = "automated-grading"
version = "1.0.0"
description = "Automated Grading & Feedback — Building AI Agents, Project 5"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=1.0,<2.0",
    "langchain-core>=1.0,<2.0",
    "langchain-anthropic>=1.0,<2.0",
    "langchain>=1.0,<2.0",
    "langfuse>=3.0,<4.0",
    "fastapi>=0.118,<0.200",
    "uvicorn[standard]>=0.35,<0.40",
    "pydantic>=2.11,<3.0",
    "numpy>=2.1,<3.0",
    "psycopg[binary]>=3.2,<4.0",
    "voyageai>=0.3,<0.4",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]

[tool.setuptools.packages.find]
where = ["."]
include = ["grading*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
