[project]
name = "agentic-rag"
version = "1.0.0"
description = "Agentic RAG Knowledge Assistant — Building AI Agents, Project 6"
requires-python = ">=3.11"
dependencies = [
    "llama-index-workflows>=1.0,<2.0",
    "llama-index-core>=0.13,<1.0",
    "anthropic>=0.44,<1.0",
    "openai>=1.58,<2.0",
    "cohere>=5.13,<6.0",
    "psycopg[binary]>=3.2,<4.0",
    "pgvector>=0.3,<1.0",
    "qdrant-client>=1.12,<2.0",
    "openinference-instrumentation-llama-index>=3.0,<4.0",
    "pydantic>=2.11,<3.0",
    "fastapi>=0.118,<0.200",
    "uvicorn[standard]>=0.35,<0.40",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]

[tool.setuptools.packages.find]
where = ["."]
include = ["assistant*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
