[project]
name = "deep-research"
version = "1.0.0"
description = "Deep Research Report Generator — Building AI Agents, Project 7"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=1.0,<2.0",
    "langchain-core>=1.0,<2.0",
    "langchain-anthropic>=1.0,<2.0",
    "langchain>=1.0,<2.0",
    "langfuse>=3.0,<4.0",
    "fastapi>=0.118,<0.200",
    "uvicorn[standard]>=0.35,<0.40",
    "tavily-python>=0.7,<0.8",
    "pydantic>=2.11,<3.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]

[tool.setuptools.packages.find]
where = ["."]
include = ["research*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
