[project]
name = "code-review"
version = "1.0.0"
description = "Multi-Agent Code Review & Security Audit — Building AI Agents, Project 8"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=1.0,<2.0",
    "langchain-core>=1.0,<2.0",
    "langchain-anthropic>=1.0,<2.0",
    "langchain>=1.0,<2.0",
    "langfuse>=3.0,<4.0",
    "fastapi>=0.118,<0.200",
    "uvicorn[standard]>=0.35,<0.40",
    "pydantic>=2.11,<3.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]

[tool.setuptools.packages.find]
where = ["."]
include = ["review*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
