[project]
name = "voice-support"
version = "1.0.0"
description = "Voice-Enabled Support Agent — Building AI Agents, Project 10"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.44,<1.0",
    "fastapi>=0.118,<0.200",
    "uvicorn[standard]>=0.35,<0.40",
    "httpx>=0.28,<1.0",
    "numpy>=2.1,<3.0",
    "webrtcvad>=2.0,<3.0",
    "faster-whisper>=1.1,<2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]

[tool.setuptools.packages.find]
where = ["."]
include = ["voice*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
