[project]
name = "competitive-intel"
version = "1.0.0"
description = "Competitive-Intelligence Monitor — Building AI Agents, Project 11"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=1.0,<2.0",
    "langchain>=1.0,<2.0",
    "langfuse>=3.0,<4.0",
    "anthropic>=0.44,<1.0",
    "httpx>=0.28,<1.0",
    "selectolax>=0.3,<1.0",
    "psycopg[binary]>=3.2,<4.0",
    "pgvector>=0.3,<1.0",
    "numpy>=2.1,<3.0",
    "apscheduler>=3.11,<4.0",
    "fastapi>=0.118,<0.200",
    "uvicorn[standard]>=0.35,<0.40",
    "pydantic>=2.11,<3.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]

[tool.setuptools.packages.find]
where = ["."]
include = ["monitor*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
