[project]
name = "shopping-agent"
version = "1.0.0"
description = "E-commerce Shopping Agent — Building AI Agents, Project 15"
requires-python = ">=3.11"
dependencies = [
    "openai-agents>=0.4,<0.5",
    "mcp[cli]>=1.12,<2.0",
    "fastapi>=0.118,<0.200",
    "uvicorn[standard]>=0.35,<0.40",
    "pydantic>=2.11,<3.0",
    "langfuse>=3.6,<4.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]

[tool.setuptools.packages.find]
where = ["."]
include = ["shopping*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
