[project]
name = "contract-diligence"
version = "1.0.0"
description = "Contract Due-Diligence & Redlining — Building AI Agents, Project 21"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=1.0,<2.0",
    "langchain-core>=1.0,<2.0",
    "langchain-anthropic>=1.0,<2.0",
    "langchain>=1.0,<2.0",
    "llama-index-core>=0.13,<1.0",
    "llama-index-readers-file>=0.4,<1.0",
    "llama-index-embeddings-openai>=0.5,<1.0",
    "psycopg[binary]>=3.2,<4.0",
    "pgvector>=0.3,<1.0",
    "langfuse>=3.0,<4.0",
    "fastapi>=0.118,<0.200",
    "uvicorn[standard]>=0.35,<0.40",
    "pydantic>=2.11,<3.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]

[tool.setuptools.packages.find]
where = ["."]
include = ["contracts*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
