[project]
name = "supply-chain"
version = "1.0.0"
description = "Cross-Enterprise A2A Supply-Chain Orchestrator — Building AI Agents, Project 25"
requires-python = ">=3.11"
dependencies = [
    "google-adk[a2a,mcp]>=2.4,<3.0",
    "a2a-sdk>=0.3.4,<0.4",
    "mcp>=1.24,<2.0",
    "httpx>=0.27,<1.0",
    "pydantic>=2.13,<3.0",
    "uvicorn[standard]>=0.51,<0.60",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]

[tool.setuptools.packages.find]
where = ["."]
include = ["inventory_agent*", "procurement_agent*", "shared*", "evals*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
